UI重构：全新设计语言 - 温暖米白配色、毛玻璃质感、流畅动画、响应式布局

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
 <meta name="theme-color" content="#FAF9F6">
 <meta name="description" content="净土法音 - Pure Land Buddhist Dharma Audio Player. 南无阿弥陀佛 Namo Amitabha">
+<meta property="og:type" content="website">
+<meta property="og:title" content="净土法音 Pure Land Dharma Audio">
+<meta property="og:description" content="佛教净土宗音频播放器，随时随地听经闻法，支持播放历史、断点续播、PWA 安装。">
+<meta property="og:url" content="https://bojingji.pages.dev/">
+<meta property="og:site_name" content="净土法音">
+<meta property="og:image" content="https://bojingji.pages.dev/icons/icon-512.png">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="净土法音 Pure Land Dharma Audio">
+<meta name="twitter:description" content="佛教净土宗音频播放器，随时随地听经闻法。">
+<meta name="twitter:image" content="https://bojingji.pages.dev/icons/icon-512.png">
+<link rel="canonical" href="https://bojingji.pages.dev/">
 <title>净土法音</title>
 <link rel="manifest" href="/manifest.json">
 <link rel="apple-touch-icon" href="/icons/icon-192.png">
